--- a/views/acceuill.html
+++ b/views/acceuill.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <h1>Acceuil</h1>
+<img src="/reed.png" alt="reed">
+
     <p>Lorem, ipsum dolor sit amet 
         consectetur adipisicing elit.
          Alias, quis veritatis! Et repellat
